[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/Classics/explosion_horizontal-sheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Prefabs/Abstract/AbstractExplode.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/FlameScripts.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "Explode"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture:load_path")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "res://.import/explosion_horizontal-sheet.png-bd8695cfbb86fd39e8ee5c0996d99407.stex", "res://.import/explosion_horizontal1-sheet-sheet.png-e68bf4cdb5b826df6d7cf1bdc44a2c60.stex" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.35 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.35, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 7.5 )

[node name="MiddleFlame" instance=ExtResource( 2 )]
position = Vector2( 29.5665, 32.6251 )
script = ExtResource( 3 )

[node name="AnimationPlayer" parent="." index="0"]
anims/Explode = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="2"]
texture = ExtResource( 1 )

[node name="CheckWall" type="RayCast2D" parent="Sprite" index="0"]
position = Vector2( -8, 1 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 4

[node name="DamageArea" type="Area2D" parent="." index="3"]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea" index="0"]
shape = SubResource( 1 )
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
