[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/Classics/explosion_horizontal_right_last-sheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Prefabs/Abstract/AbstractExplode.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/FlameScripts.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Animations/ExplodeOfTopFlame.tres" type="Animation" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="TopFlame" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="AnimationPlayer" parent="." index="0"]
anims/Explode = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="." index="2"]
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CheckWall" type="RayCast2D" parent="Sprite" index="0"]
position = Vector2( 0, 1 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 4

[node name="DamageArea" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea" index="0"]
shape = SubResource( 1 )
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
